[tool.poetry]
name = "sarah-dowell-photography-calendar"
version = "0.1.0"
description = ""
authors = ["Christian Dowell <cdowell09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
icalendar = "^5.0.13"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
